Adjusted header to use sticky positioning and increased top margin for all pages to prevent content overlap.

--- a/src/NammaTeaKada/Home.css
+++ b/src/NammaTeaKada/Home.css
@@ -177,47 +177,60 @@ main{
 
 }
 
-.section2{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 0rem;
-  gap: 0rem;
-}
-.section2>.cont2 {
-  background-color: black;
-}
-.section2>.cont2>.about-title{
-  font-size: 2.5rem;
-  color: hsl(38, 100%, 50%);
-  margin-bottom: 20px;
-}
-.section2>.cont2>p{
-  color: white;
-  font-size: 1.2rem;
-  line-height: 1.6;
-  margin-bottom: 15px;
-}
-.img{
-  /* background-image: url('src/assets/images/IMG_0640.JPG'); */
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-  justify-content: center;
-  margin-right: 0;
-  padding: 0rem;
-  
-}
-.cont2{
+.section2 {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 1rem;
   align-items: center;
   text-align: center;
-  padding: 0rem;
+  padding: 2rem;
+  background-color: black;
+}
+
+.section2 > .cont2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: white;
+  margin-top: 30px;
+}
+
+.section2 > .cont2 > .about-title {
+  font-size: 2rem;
+  color: hsl(38, 100%, 50%);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.section2 > .cont2 > p {
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+@media (max-width: 900px) {
+  .section2 {
+    padding: 1.5rem;
+  }
+  .section2 > .cont2 > .about-title {
+    font-size: 1.5rem;
+  }
+  .section2 > .cont2 > p {
+    font-size: 0.95rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .section2 {
+    padding: 1rem;
+  }
+  .section2 > .cont2 > .about-title {
+    font-size: 1.2rem;
+  }
+  .section2 > .cont2 > p {
+    font-size: 0.9rem;
+  }
 }
 
 .section3{
